--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,7 @@ dependencies:
   # Need older setuptools for openfold
   - setuptools=69.5.1
   # ProDy needs to be installed with conda
-  - prody==2.2.0
+  - prody
   - scipy==1.12.0
   # Need to install torch in order to build openfold, so install it first
   - pip:
